--- a/projeto recodepro/contato.html
+++ b/projeto recodepro/contato.html
@@ -20,17 +20,34 @@
          background-color: rgb(248, 244, 244);    
          text-align: left;
          text-decoration: none;
+         font-family: 'Times New Roman', Times, serif;
         }
         aside {
-             width: 30%;
-             padding-left: 15px;
-             margin-left: 15px;
-             float: right;
-             font-style: italic;
-         }
+           width: 30%;
+           padding-left: 15px;
+           margin-left: 15px;
+           float: right;
+           font-style: italic;
+          }
+          h2 {
+           color: violet;
+           font-family: 'Times New Roman', Times, serif;
+           font-size: 300%;
+           text-shadow: 2px 2px 5px rgb(10, 0, 0);
+          }
+          h4 {
+           color: rgb(25, 62, 182);
+           font-family: 'Times New Roman', Times, serif;
+           font-size: 200%;
+           text-shadow: 2px 2px 5px rgb(10, 0, 0);
+          }
+          p {
+           color:blueviolet;
+           font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+          }
     </style>
  </head>
- <body style="background-color: yellow;">
+ <body style="background-color: rgb(0, 234, 255)">
       <div class="container">
       <nav class="mDiv">
          <font color="red">
@@ -42,15 +59,10 @@
          </font>       
        </nav>
      </div>
-     <p><font color="blue" size="20">Contato</font></p> 
-     <br>
-     <aside>
-        <p>Itália</p>
-        <img src="./img/roma.png">
-    </aside> 
-    <div class="container">
+     <div class="container">
+        <h2><p><font color="blue" size="20">Contato</font></p></h2> 
         <h2>Entre em contato conosco</h2>
-       <form>
+       <form action="./sucesso.html">
            <h4>Nome:</h4>
            <input type="text" style="width:400px;">
            <h4>Mensagem:</h4>
