--- a/projeto recodepro/index.html
+++ b/projeto recodepro/index.html
@@ -12,22 +12,36 @@
      <title>Agência de Viagens Blue Butterfly</title>
    </head>
    <style> 
-    .mDiv {
-      width: 100%;
+     .mDiv {
+       width: 100%;
             display: flex;
             justify-content: center; 
             gap: 10px; 
             border: 5px outset blue;
-     background-color: rgb(248, 244, 244);    
-     text-align: left;
-     text-decoration: none;
-    }
-
-    .carousel{
+        background-color: rgb(248, 244, 244);    
+        text-align: left;
+        text-decoration: none;
+        font-family: 'Times New Roman', Times, serif;
+      }
+ 
+     .carousel{ 
+      margin: auto;
       width: 50%;
-    }
+      padding: 10px;
+     }
+     h2 {
+     color: violet;
+     font-family: 'Times New Roman', Times, serif;
+     font-size: 300%;
+     text-shadow: 2px 2px 5px rgb(10, 0, 0);
+     }
+    
+     p {
+     color:blueviolet;
+     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+     }
    </style>
- <body style="background-color: yellow;">
+ <body style="background-color: rgb(0, 234, 255);">
    <div class="container">
       <nav class="mDiv">
        <font color="red">
@@ -41,11 +55,10 @@
    </div> 
    <br>
    <div class="container">
-    <p><font color="blue" size="20">Home</font></p>  
-    <h2>Sua Agência de Viagens Blue Butterfly.</h2>
-    <p>Venha viajar conosco, e venha descobrir as maravilhas que são os lugares dos seus sonhos!!!</p>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
+      <h2 align="center">Sua Agência de Viagens Blue Butterfly.</font></h2>
+      <p align="center">Venha viajar conosco, e venha descobrir as maravilhas que são os lugares dos seus sonhos!!!</p>
+     <div id="carouselExampleControls"  class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner" >
         <div class="carousel-item active">
           <img src="./img/inglaterra.png" class="d-block w-100" alt="...">
         </div>
@@ -55,7 +68,13 @@
         <div class="carousel-item">
           <img src="./img/Disney.png" class="d-block w-100" alt="...">
         </div>
-      </div>
+        <div class="carousel-item">
+          <img src="./img/Irlanda.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/Madri.png" class="d-block w-100" alt="...">
+        </div>
+     </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -65,7 +84,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <center>
+   <center>
       <span>
         <p id="formas_de_pagamento">Formas de pagamento</p>
         <img src="./Img/NO CARTÃO (1).png" alt="formas de pagamento">
