--- a/projeto recodepro/promocoes.html
+++ b/projeto recodepro/promocoes.html
@@ -21,16 +21,17 @@
         height: auto;
         padding: 0;
       }
-       .mDiv {
-            width: 100%; 
+      .mDiv {
+       width: 100%;
             display: flex;
             justify-content: center; 
             gap: 10px; 
             border: 5px outset blue;
-            background-color: rgb(248, 244, 244);    
-            text-align: left;
-            text-decoration: none;
-       }
+        background-color: rgb(248, 244, 244);    
+        text-align: left;
+        text-decoration: none;
+        font-family: 'Times New Roman', Times, serif;
+      }
        .titulo {
         width: 100%;
         height: auto;
@@ -53,9 +54,19 @@
             justify-content: space-between; 
             flex-wrap: wrap; 
         }
+        h2 {
+     color: violet;
+     font-family: 'Times New Roman', Times, serif;
+     font-size: 300%;
+     text-shadow: 2px 2px 5px rgb(10, 0, 0);
+     }
+     p {
+     color:blueviolet;
+     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+     }
       </style>
  </head>
- <body style="background-color: yellow;">
+ <body style="background-color: rgb(0, 234, 255);">
      <header class="container-fluid header"> 
       <nav class="mDiv">
         <font color="red">
@@ -69,7 +80,7 @@
      </header>
      <div class="titulo"> 
      </div>
-     <p><font color="blue" size="20">Promoção</font></p>
+     <h2><p><font color="blue" size="20">Promoção</font></p></h2>
      <main class="container-fluid"> 
       <section class="cards container-fluid">
         <div class=" cardsLocais cardsEUA">
