--- a/projeto recodepro/sucesso.html
+++ b/projeto recodepro/sucesso.html
@@ -3,8 +3,33 @@
 <thead>
     <meta charset="UTF-8"
 </thead>
-<body>
-    <h1> dados enviado com sucesso</h1>
-    <button><a href="./teste02.html"> enviar novos dados </a></button>
+<style> 
+    .mDiv {
+      width: 100%;
+           display: flex;
+           justify-content: center; 
+           gap: 10px; 
+           border: 5px outset blue;
+       background-color: rgb(248, 244, 244);    
+       text-align: left;
+       text-decoration: none;
+       font-family: 'Times New Roman', Times, serif;
+     }
+
+     h1 {
+    color: violet;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 300%;
+    text-shadow: 2px 2px 5px rgb(10, 0, 0);
+    }
+   
+    p {
+    color:blueviolet;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    }
+</style>
+<body style="background-color: rgb(0, 234, 255);">
+    <h1> Seus dados foi enviado com sucesso!!!</h1>
+    <button><a href="./contato.html"><p>enviar novas Mensagens!!</p></a></button>
 </body>
 </html>
